@@ -40,4 +40,9 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	jvmArgs '-XX:+EnableDynamicAgentLoading', '-Xshare:off'
+}
+
+tasks.named('bootRun') {
+	jvmArgs '-XX:+EnableDynamicAgentLoading', '-Xshare:off'
 }
